--- a/BeamTest/BeamTest.csproj
+++ b/BeamTest/BeamTest.csproj
@@ -54,7 +54,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="E:\Users\Timofey\Desktop\!dep406\ПРОГРАММА ЦАР\Program.cs">
+      <Link>Program.cs</Link>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
