--- a/BeamService/BeamService.csproj
+++ b/BeamService/BeamService.csproj
@@ -57,6 +57,8 @@
   <ItemGroup>
     <Compile Include="DigitalAntennaArray.cs" />
     <Compile Include="Matrix.cs" />
+    <Compile Include="Pattern.cs" />
+    <Compile Include="PatternValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
