--- a/BeamService/BeamService.csproj
+++ b/BeamService/BeamService.csproj
@@ -23,7 +23,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\BeamService.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -56,7 +57,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DigitalAntennaArray.cs" />
+    <Compile Include="DigitalSignal.cs" />
+    <Compile Include="FourierMatrix.cs" />
     <Compile Include="Matrix.cs" />
+    <Compile Include="MatrixComplex.cs" />
     <Compile Include="Pattern.cs" />
     <Compile Include="PatternValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
