--- a/BeamService/BeamService.csproj
+++ b/BeamService/BeamService.csproj
@@ -56,6 +56,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ADC.cs" />
     <Compile Include="DigitalAntennaArray.cs" />
     <Compile Include="DigitalSignal.cs" />
     <Compile Include="FourierMatrix.cs" />
@@ -76,6 +77,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="SignalValue.cs" />
     <Compile Include="Source.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
