--- a/BeamService/BeamService.csproj
+++ b/BeamService/BeamService.csproj
@@ -57,11 +57,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ADC.cs" />
+    <Compile Include="AmplitudeSignalFunction.cs" />
+    <Compile Include="CosSignal.cs" />
     <Compile Include="DigitalAntennaArray.cs" />
     <Compile Include="DigitalSignal.cs" />
+    <Compile Include="DigitalSpectrum.cs" />
     <Compile Include="FourierMatrix.cs" />
+    <Compile Include="HarmonicSignalFunction.cs" />
+    <Compile Include="LamdaSignalFunction.cs" />
     <Compile Include="Matrix.cs" />
     <Compile Include="MatrixComplex.cs" />
+    <Compile Include="PageFunction1.xaml.cs">
+      <DependentUpon>PageFunction1.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pattern.cs" />
     <Compile Include="PatternValue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -77,8 +85,14 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="RadioScene.cs" />
+    <Compile Include="Sample.cs" />
+    <Compile Include="SignalFunction.cs" />
     <Compile Include="SignalValue.cs" />
+    <Compile Include="SinSignal.cs" />
     <Compile Include="Source.cs" />
+    <Compile Include="SpaceSignal.cs" />
+    <Compile Include="SpectrumSample.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -91,6 +105,12 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="PageFunction1.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
