--- a/BeamForming/packages.config
+++ b/BeamForming/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net461" />
+  <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="net461" />
@@ -47,6 +48,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
 </packages>
