--- a/BeamForming/packages.config
+++ b/BeamForming/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="3.3.0" targetFramework="net461" />
   <package id="FontAwesome.WPF" version="4.7.0.9" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="2018.2.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Platforms" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.0" targetFramework="net461" />
