Реализация цифровых фильтров ФНЧ и ФВЧ на RC-цепочке

--- a/DSP.Lib/DSP.Lib.csproj
+++ b/DSP.Lib/DSP.Lib.csproj
@@ -53,6 +53,7 @@
     <Compile Include="DoubleArrayExtensions.cs" />
     <Compile Include="DoubleFuncExtensions.cs" />
     <Compile Include="IIR.cs" />
+    <Compile Include="LowPassRC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExponentialLowPassRC.cs" />
   </ItemGroup>
