--- a/DSP.Lib/DSP.Lib.csproj
+++ b/DSP.Lib/DSP.Lib.csproj
@@ -56,6 +56,7 @@
     <Compile Include="LowPassRC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ExponentialLowPassRC.cs" />
+    <Compile Include="Service\Polynom.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
