--- a/DSP.Console/DSP.Console.csproj
+++ b/DSP.Console/DSP.Console.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MathService">
+      <HintPath>..\lib\MathService.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -41,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AntennaArrayTest.cs" />
+    <Compile Include="DigitalAntennaArray2Test.cs" />
     <Compile Include="FilterTests.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -54,6 +58,10 @@
     <ProjectReference Include="..\AntennaLib\AntennaLib.csproj">
       <Project>{39c2f4b5-2c8e-49f8-90d7-eb2546a5f363}</Project>
       <Name>AntennaLib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\BeamService\BeamService.csproj">
+      <Project>{CCC78748-4795-4404-B374-791547A6CD91}</Project>
+      <Name>BeamService</Name>
     </ProjectReference>
     <ProjectReference Include="..\DSP.Lib\DSP.Lib.csproj">
       <Project>{ff5b9ad2-57e9-443d-a91f-da90a672298c}</Project>
