--- a/BeamService/BeamService.csproj
+++ b/BeamService/BeamService.csproj
@@ -72,6 +72,7 @@
     <Compile Include="CosSignal.cs" />
     <Compile Include="DiffSignalFunction.cs" />
     <Compile Include="DigitalAntennaArray.cs" />
+    <Compile Include="Digital\BeamForming.cs" />
     <Compile Include="Digital\DigitalAntennaArray2.cs" />
     <Compile Include="SamplesSignal.cs" />
     <Compile Include="DigitalSpectrum.cs" />
