--- a/BeamForming/BeamForming.csproj
+++ b/BeamForming/BeamForming.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Extended.Wpf.Toolkit" Version="3.8.1" />
+    <PackageReference Include="MiqM.Xceed.Wpf.Toolkit.NETCore" Version="3.5.1.3" />
     <PackageReference Include="FontAwesome5" Version="2.0.5" />
     <PackageReference Include="MathCore" Version="0.0.22.2" />
     <PackageReference Include="MathCore.WPF" Version="0.0.0.2" />
