--- a/Tests/BeamServiceTests/BeamServiceTests.csproj
+++ b/Tests/BeamServiceTests/BeamServiceTests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathCore" Version="0.0.22.2" />
+    <PackageReference Include="MathCore.TestsExtensions" Version="0.1.28" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
